--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,4 @@ platform = espressif8266
 board = nodemcuv2
 framework = arduino
 lib_deps = crankyoldgit/IRremoteESP8266@^2.8.2
+monitor_speed = 115200
